fix(api): adicionar tratamento de erros em todos os endpoints
- try/catch global em cada handler
- verificar error retornado pelo Supabase em cada operação
- console.error para facilitar debug no log da Vercel
- corrige erros 500 silenciosos que dificultavam diagnóstico

Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,7 @@ SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 CRM_API_KEY=
 
+# Opcionais: não são usados pelo backend atual (Super Agentes chama nossa API, não o contrário).
+# Só preencha se no futuro houver webhook ou chamadas do backend ao Super Agentes.
 SUPERAGENTES_WEBHOOK_TOKEN=
 SUPERAGENTES_API_KEY=
