--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,10 @@
     "api/**/*.ts": {
       "runtime": "@vercel/node@3.2.0"
     }
+  },
+  "build": {
+    "env": {
+      "NODE_VERSION": "20"
+    }
   }
 }
