--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,9 @@
     "api/**/*.ts": {
       "runtime": "@vercel/node@3.2.0"
     }
-  }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/$1" },
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
