feat: adiciona endpoint sync_conversations para sincronizar leads do Super Agentes
Made-with: Cursor

--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,9 @@ SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 CRM_API_KEY=
 
-# Opcionais: não são usados pelo backend atual (Super Agentes chama nossa API, não o contrário).
-# Só preencha se no futuro houver webhook ou chamadas do backend ao Super Agentes.
-SUPERAGENTES_WEBHOOK_TOKEN=
+# Super Agentes - Integração
 SUPERAGENTES_API_KEY=
+SUPERAGENTES_AGENT_ID=
+
+# Token para sincronização de conversas (opcional)
+SYNC_TOKEN=
