feat: adiciona historico de conversa na pagina do lead + sync a cada 1 minuto
Made-with: Cursor

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "crons": [
     {
       "path": "/api/sync_conversations",
-      "schedule": "*/10 * * * *"
+      "schedule": "* * * * *"
     }
   ],
   "rewrites": [
