fix: altera cron para diario (hobby plan limit)
Made-with: Cursor

--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
   "crons": [
     {
       "path": "/api/sync_conversations",
-      "schedule": "* * * * *"
+      "schedule": "0 6 * * *"
     }
   ],
   "rewrites": [
